<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_bold"
    tools:context=".aboutPage">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dip"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dip"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/about_text"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/hyperlink"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/people"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/textView5"
        android:layout_marginTop="10dp"
        android:contentDescription="@drawable/izzah1"
        android:src="@drawable/izzah1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/izzah"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/izzahId"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/izzahClass"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/textView8"
        android:layout_marginTop="10dp"
        android:contentDescription="@drawable/arifa"
        android:src="@drawable/arifa" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/arifa"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/arifaId"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/arifaClass"
        android:textColor="@color/white"
        android:textSize="12sp" />
</RelativeLayout>
