<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/sage_green"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="serif-monospace"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="10dp"
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/izzah1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/izzah"
            android:textColor="#ffffff"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/izzahId"
            android:textColor="#ffffff"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/izzahClass"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/arifa"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/arifa"
            android:textColor="#ffffff"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/arifaId"
            android:textColor="#ffffff"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/arifaClass"
            android:textColor="#ffffff"
            android:textSize="14sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="serif-monospace"
            android:padding="5dp"
            android:text="@string/copyright"
            android:textColor="#ffffff"
            android:textSize="14sp" />




    </LinearLayout>
</LinearLayout>